path import fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
       "@services/*": ["src/shared/services/*"],
       "@sockets/*": ["src/shared/sockets/*"],
       "@workers/*": ["src/shared/workers/*"],
+      "@shared/*": ["src/shared/*"],
       "@root/*": ["src/*"]
     }
   },
