--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon -L -r tsconfig-paths/register src/app.ts | bunyan",
     "start": "node dist/app.js | bunyan",
-    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "build:dist": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "build": "rimraf ./dist && yarn build:dist",
     "lint:check": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "prettier:check": "prettier --check \"src/**/*.{ts,json}\"",
@@ -16,9 +17,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/express": "^5.9.1",
+    "@bull-board/ui": "^5.9.1",
     "@socket.io/redis-adapter": "^8.2.1",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.11.4",
     "bunyan": "^1.8.15",
+    "cloudinary": "^1.41.0",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -29,23 +34,34 @@
     "hpp": "^0.2.3",
     "http-status-codes": "^2.3.0",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "redis": "^4.6.10",
+    "sharp": "^0.32.6",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.5",
+    "@types/bull": "^4.10.0",
     "@types/bunyan": "^1.8.10",
     "@types/compression": "^1.7.4",
     "@types/cookie-session": "^2.0.46",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/hpp": "^0.2.4",
+    "@types/jsonwebtoken": "^9.0.4",
+    "@types/lodash": "^4.14.200",
+    "@types/multer": "^1.4.9",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
