--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@bull-board/express": "^5.9.1",
     "@bull-board/ui": "^5.9.1",
+    "@sendgrid/mail": "^7.7.0",
     "@socket.io/redis-adapter": "^8.2.1",
     "bcryptjs": "^2.4.3",
     "bull": "^4.11.4",
@@ -28,6 +29,7 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^7.0.0",
@@ -39,6 +41,7 @@
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.7",
     "redis": "^4.6.10",
     "sharp": "^0.32.6",
     "socket.io": "^4.7.2"
@@ -50,18 +53,23 @@
     "@types/compression": "^1.7.4",
     "@types/cookie-session": "^2.0.46",
     "@types/cors": "^2.8.15",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.20",
     "@types/hpp": "^0.2.4",
+    "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/lodash": "^4.14.200",
     "@types/multer": "^1.4.9",
+    "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
