--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,5 +40,5 @@
   },
 
   "include": ["src"],
-  "exclude": ["node_modules", "src/**/test/*.ts", "src/**/mocks/*.ts"]
+  "exclude": ["node_modules", "src/**/test/*.ts"]
 }
