--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
       "@post/*": ["src/features/post/*"],
       "@reaction/*": ["src/features/reaction/*"],
       "@comment/*": ["src/features/comment/*"],
+      "@follower/*": ["src/features/follower/*"],
       "@globals/*": ["src/shared/globals/*"],
       "@services/*": ["src/shared/services/*"],
       "@sockets/*": ["src/shared/sockets/*"],
