--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.3.0",
+    "ip": "^1.1.8",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
@@ -47,7 +49,6 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.5",
-    "@types/bull": "^4.10.0",
     "@types/bunyan": "^1.8.10",
     "@types/compression": "^1.7.4",
     "@types/cookie-session": "^2.0.46",
@@ -55,6 +56,7 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.20",
     "@types/hpp": "^0.2.4",
+    "@types/ip": "^1.1.3",
     "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/lodash": "^4.14.200",
