notifications controller fix

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,19 @@ JWT_SEC="thisisjsonwebtokensecret"
 NODE_ENV="development"
 SECRET_KEY_1="thisisasecretkey"
 SECRET_KEY_2="thisisasecretkey2"
-CLIENT_URL="http://localhost:5173"
+CLIENT_URL="http://localhost:8080"
 REDIS_URL="redis://localhost:6379"
+
+# mailer
+SENDER_EMAIL="jalyn4@ethereal.email"
+SENDER_EMAIL_PASSWORD="C5s5KW84s9DGupxCSG"
+SENDGRID_API_KEY="test api key"
+SENDGRID_SENDER="test sender"
+
+# cloudinary
+CLOUD_NAME="dkj7w978g"
+CLOUD_API_KEY="712465537668869"
+CLOUD_API_SEC="hrYtQ_KZEkqYHqODLfoKHDGB4sA"
+
+
+
