--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:check": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "prettier:check": "prettier --check \"src/**/*.{ts,json}\"",
-    "prettier:fix": "prettier --write \"src/**/*.{ts,json}\""
+    "prettier:fix": "prettier --write \"src/**/*.{ts,json}\"",
+    "ac": "autocannon -c 12 http://localhost:5500"
   },
   "keywords": [],
   "author": "",
