--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,20 @@
 PORT="5500"
+# DATABASE_URL="mongodb+srv://sa2:sa2@test.lnkqixt.mongodb.net/social?retryWrites=true&w=majority"
 DATABASE_URL="mongodb://localhost:27017/social"
+# DATABASE_URL="mongodb://mongo:27017"
 JWT_SEC="thisisjsonwebtokensecret"
 NODE_ENV="development"
 SECRET_KEY_1="thisisasecretkey"
 SECRET_KEY_2="thisisasecretkey2"
 CLIENT_URL="http://localhost:8080"
 REDIS_URL="redis://localhost:6379"
+# REDIS_HOST="'redis-10863.c305.ap-south-1-1.ec2.cloud.redislabs.com'"
+# REDIS_PORT="10863"
+# REDIS_PASSWORD="yk4SNuBUo82becJ4iEa8oMQCCQoDypFf"
 
 # mailer
-SENDER_EMAIL="jalyn4@ethereal.email"
-SENDER_EMAIL_PASSWORD="C5s5KW84s9DGupxCSG"
+SENDER_EMAIL="blaise.gutmann@ethereal.email"
+SENDER_EMAIL_PASSWORD="yh6HgCuRWPsMAUjMk6"
 SENDGRID_API_KEY="test api key"
 SENDGRID_SENDER="test sender"
 
