--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "ts-node -r tsconfig-paths/register src/app.ts | bunyan",
+    "dev": "nodemon -L -r tsconfig-paths/register src/app.ts | bunyan",
     "start": "node dist/app.js | bunyan",
     "build:dist": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "build": "rimraf ./dist && yarn build:dist",
@@ -68,6 +68,7 @@
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
