--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.3.0",
